--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
   "dependencies": {
     "axios": "^0.26.0",
     "concurrently": "^7.0.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "joi": "^17.6.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
+    "@types/joi": "^17.2.3",
     "@types/morgan": "^1.9.3",
+    "@types/express-session": "^1.17.4",
     "nodemon": "^2.0.15"
   }
 }
